Prevent toasts from adding a global scrollbar during animation

--- a/src/renderer/globals.css
+++ b/src/renderer/globals.css
@@ -134,6 +134,7 @@
         height: 100%;
         transform: translateZ(0);
         will-change: transform;
+        overflow: hidden;
     }
     body {
         height: 100%;
